--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
   align-items: center;
   padding: 1.4rem 7%;
   background-color: rgba(1, 1, 1, 0.8);
-  border-bottom: 1px solid #513c28;
+  border-bottom: 1px solid var(--primary);
   position: fixed;
   top: 0;
   left: 0;
@@ -141,6 +141,7 @@ body {
   color: #fff;
   background-color: var(--primary);
   border-radius: 0.5rem;
+  border: 0.1rem solid #fff;
   box-shadow: 1px 1px 1px 3px rgba(1, 1, 3, 0.2);
 }
 
@@ -221,6 +222,7 @@ body {
 
 .services .row .services-card img {
   border-radius: 50%;
+  border: 0.1rem solid #fff;
   width: 70%;
 }
 
@@ -237,6 +239,7 @@ body {
   display: flex;
   margin-top: 2rem;
   background-color: #222;
+  border: 0.1rem solid #fff;
 }
 
 .contact .row .map {
@@ -272,7 +275,9 @@ body {
   display: inline-block;
   padding: 1rem 3rem;
   font-size: 1.7rem;
+  font-weight: 600;
   color: #fff;
+  border: 0.1rem solid #fff;
   background-color: var(--primary);
   cursor: pointer;
 }
@@ -282,6 +287,7 @@ footer {
   text-align: center;
   padding: 1rem 0 3rem;
   margin-top: 3rem;
+  border-top: 0.1rem solid #fff;
 }
 
 footer .socials {
@@ -341,7 +347,7 @@ footer .credit a {
     background-color: #fff;
     width: 30rem;
     height: 30rem;
-    border-radius: 5%;
+    border-radius: 2%;
     border: 0.1rem solid var(--primary);
     transition: 0.3s;
   }
